[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/main_menu_scenes/book/book.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/runtime_data/runtime_data.tres" type="Resource" id=2]
[ext_resource path="res://scenes/main_menu_scenes/book/book.gd" type="Script" id=3]
[ext_resource path="res://scenes/main_menu_scenes/books/books.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 4, 0.64, 4.5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.870588, 0.411765, 0.0823529, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 4, 1, 0.64 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.09875, 2.76981, 2.36513 )

[sub_resource type="Animation" id=5]
resource_name = "SpotLight"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("SpotLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 6.0 ]
}

[node name="Books" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 18.9954, -11.6126 )
script = ExtResource( 4 )
_runtime_data = ExtResource( 2 )
_area = NodePath("Area")
_spot_light_animation_player = NodePath("AnimationPlayer")
_spot_light = NodePath("SpotLight")

[node name="Book" type="Spatial" parent="." instance=ExtResource( 1 )]
script = ExtResource( 3 )
_runtime_data = ExtResource( 2 )
_animation_player = NodePath("AnimationController")
_spine_mesh = NodePath("BookMesh/Spine/Spine")
_front_cover_mesh = NodePath("BookMesh/FrontRotationPivot/FrontCover/Cover")
_back_cover_mesh = NodePath("BookMesh/BackRotationPivot/BackCover/Cover")
_albedo = Color( 0.960784, 0.054902, 0.054902, 1 )

[node name="Book2" type="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.95631 )
script = ExtResource( 3 )
_runtime_data = ExtResource( 2 )
_animation_player = NodePath("AnimationController")
_spine_mesh = NodePath("BookMesh/Spine/Spine")
_front_cover_mesh = NodePath("BookMesh/FrontRotationPivot/FrontCover/Cover")
_back_cover_mesh = NodePath("BookMesh/BackRotationPivot/BackCover/Cover")
_albedo = Color( 0.0509804, 0.882353, 0.945098, 1 )

[node name="Book3" type="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.91167 )
script = ExtResource( 3 )
_runtime_data = ExtResource( 2 )
_animation_player = NodePath("AnimationController")
_spine_mesh = NodePath("BookMesh/Spine/Spine")
_front_cover_mesh = NodePath("BookMesh/FrontRotationPivot/FrontCover/Cover")
_back_cover_mesh = NodePath("BookMesh/BackRotationPivot/BackCover/Cover")
_albedo = Color( 0.27451, 0.956863, 0.027451, 1 )

[node name="Bookshelf" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.25441, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Bookshelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.69662, -0.93347 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Bookshelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46023, 0.995431 )
mesh = SubResource( 3 )
material/0 = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Bookshelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.46023, -2.86482 )
mesh = SubResource( 3 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.412718, -0.944642 )
shape = SubResource( 4 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 5.00775, 0.245342, -1.035 )
visible = false
light_energy = 0.0
shadow_enabled = true
spot_range = 10.8148
spot_angle = 37.9105

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SpotLight = SubResource( 5 )
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
